added responsive login page

--- a/static/src/output.css
+++ b/static/src/output.css
@@ -605,6 +605,26 @@ video {
   margin-top: 3em;
 }
 
+.mt-\[1em\] {
+  margin-top: 1em;
+}
+
+.mt-\[0\.2em\] {
+  margin-top: 0.2em;
+}
+
+.mb-\[0\.2em\] {
+  margin-bottom: 0.2em;
+}
+
+.mb-\[0\.5em\] {
+  margin-bottom: 0.5em;
+}
+
+.mt-\[0\.25em\] {
+  margin-top: 0.25em;
+}
+
 .block {
   display: block;
 }
@@ -623,6 +643,22 @@ video {
 
 .h-\[1\.25em\] {
   height: 1.25em;
+}
+
+.h-\[1px\] {
+  height: 1px;
+}
+
+.h-\[30em\] {
+  height: 30em;
+}
+
+.min-h-\[100\%\] {
+  min-height: 100%;
+}
+
+.min-h-\[100vh\] {
+  min-height: 100vh;
 }
 
 .w-\[1\.25em\] {
@@ -649,12 +685,32 @@ video {
   width: 100%;
 }
 
+.w-\[30\%\] {
+  width: 30%;
+}
+
+.w-\[40\%\] {
+  width: 40%;
+}
+
 .max-w-\[85\%\] {
   max-width: 85%;
 }
 
 .max-w-\[8em\] {
   max-width: 8em;
+}
+
+.max-w-\[100px\] {
+  max-width: 100px;
+}
+
+.max-w-\[150px\] {
+  max-width: 150px;
+}
+
+.max-w-\[10em\] {
+  max-width: 10em;
 }
 
 .grid-cols-1 {
@@ -725,6 +781,14 @@ video {
   border-radius: 7em;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-\[5em\] {
+  border-radius: 5em;
+}
+
 .border-2 {
   border-width: 2px;
 }
@@ -741,6 +805,16 @@ video {
 .border-\[\#C3D1C6\] {
   --tw-border-opacity: 1;
   border-color: rgb(195 209 198 / var(--tw-border-opacity));
+}
+
+.border-orange-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(249 115 22 / var(--tw-border-opacity));
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .bg-\[\#376B44\] {
@@ -768,8 +842,22 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#598D66\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(89 141 102 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-\[url\(\'\/static\/images\/collections\.png\'\)\] {
   background-image: url('/static/images/collections.png');
+}
+
+.bg-\[url\(\'\/static\/images\/login-image\.png\'\)\] {
+  background-image: url('/static/images/login-image.png');
 }
 
 .bg-cover {
@@ -830,8 +918,46 @@ video {
   padding-bottom: 3em;
 }
 
+.px-\[0\.625em\] {
+  padding-left: 0.625em;
+  padding-right: 0.625em;
+}
+
+.py-\[0\.25em\] {
+  padding-top: 0.25em;
+  padding-bottom: 0.25em;
+}
+
+.py-\[0\.4em\] {
+  padding-top: 0.4em;
+  padding-bottom: 0.4em;
+}
+
+.py-\[5em\] {
+  padding-top: 5em;
+  padding-bottom: 5em;
+}
+
+.px-\[0\.75em\] {
+  padding-left: 0.75em;
+  padding-right: 0.75em;
+}
+
+.py-\[0\.5em\] {
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+
 .pt-\[1em\] {
   padding-top: 1em;
+}
+
+.pb-\[4em\] {
+  padding-bottom: 4em;
+}
+
+.pt-\[2em\] {
+  padding-top: 2em;
 }
 
 .text-center {
@@ -848,6 +974,19 @@ video {
 
 .text-\[1\.5rem\] {
   font-size: 1.5rem;
+}
+
+.text-\[0\.625rem\] {
+  font-size: 0.625rem;
+}
+
+.text-\[0\.9rem\] {
+  font-size: 0.9rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-medium {
@@ -882,6 +1021,47 @@ video {
   color: rgb(107 33 168 / var(--tw-text-opacity));
 }
 
+.text-\[\#\#598D66\] {
+  color: ##598D66;
+}
+
+.text-\[\#598D66\] {
+  --tw-text-opacity: 1;
+  color: rgb(89 141 102 / var(--tw-text-opacity));
+}
+
+.underline {
+  text-decoration-line: underline;
+}
+
+.placeholder-indigo-700::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(67 56 202 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-indigo-700::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(67 56 202 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-\[\#\#598D66\]::-moz-placeholder {
+  color: ##598D66;
+}
+
+.placeholder-\[\#\#598D66\]::placeholder {
+  color: ##598D66;
+}
+
+.placeholder-\[\#598D66\]::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(89 141 102 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-\[\#598D66\]::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(89 141 102 / var(--tw-placeholder-opacity));
+}
+
 @media (min-width: 640px) {
   .sm\:mb-0 {
     margin-bottom: 0px;
@@ -909,6 +1089,10 @@ video {
 
   .sm\:w-\[66\%\] {
     width: 66%;
+  }
+
+  .sm\:max-w-\[70\%\] {
+    max-width: 70%;
   }
 
   .sm\:grid-cols-2 {
@@ -949,6 +1133,11 @@ video {
   .sm\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
+  }
+
+  .sm\:py-\[10em\] {
+    padding-top: 10em;
+    padding-bottom: 10em;
   }
 
   .sm\:pb-\[1\.5em\] {
@@ -992,6 +1181,14 @@ video {
   .md\:text-\[2rem\] {
     font-size: 2rem;
   }
+
+  .md\:text-\[2\.25rem\] {
+    font-size: 2.25rem;
+  }
+
+  .md\:text-\[2\.35rem\] {
+    font-size: 2.35rem;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1002,6 +1199,10 @@ video {
 
   .lg\:mt-0 {
     margin-top: 0px;
+  }
+
+  .lg\:block {
+    display: block;
   }
 
   .lg\:flex {
@@ -1034,6 +1235,14 @@ video {
 
   .lg\:max-w-\[85\%\] {
     max-width: 85%;
+  }
+
+  .lg\:max-w-full {
+    max-width: 100%;
+  }
+
+  .lg\:max-w-\[70\%\] {
+    max-width: 70%;
   }
 
   .lg\:grid-cols-4 {
@@ -1082,8 +1291,29 @@ video {
     padding-bottom: 1em;
   }
 
+  .lg\:px-\[4em\] {
+    padding-left: 4em;
+    padding-right: 4em;
+  }
+
   .lg\:pb-0 {
     padding-bottom: 0px;
+  }
+
+  .lg\:pt-0 {
+    padding-top: 0px;
+  }
+
+  .lg\:pb-\[3em\] {
+    padding-bottom: 3em;
+  }
+
+  .lg\:pb-\[5em\] {
+    padding-bottom: 5em;
+  }
+
+  .lg\:pb-\[8em\] {
+    padding-bottom: 8em;
   }
 
   .lg\:text-\[2\.5rem\] {
