--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -54,7 +54,7 @@
         <div class="registration-link | mt-[1.5em] flex flex-col items-center">
           <a
             class="text-primary border-2 py-[0.875em] px-[2.75em] w-full text-center"
-            href="#"
+            href="{% url 'registration-page' %}"
             >Регистрация</a
           >
         </div>
