--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -6,7 +6,7 @@
     <div
       class="registration-inner | pt-[2em] pb-[4em] sm:py-[10em] lg:flex lg:w-full lg:pt-0 lg:pb-0"
     >
-      <div class="registration-main-block | lg:px-[4em] lg:pb-[8em]">
+      <div class="registration-main-block | lg:px-[4em] lg:pb-[8em] lg:w-[50%]">
         <div class="hero-text | flex flex-col gap-[1em] mt-[3.75em]">
           <h1 class="main-font main-title md:text-[2.35rem] lg:text-[3.75rem]">
             Регистрация в <span class="text-primary">Ink. House</span>
@@ -81,7 +81,7 @@
         </div>
       </div>
       <div
-        class="registration-image-block | bg-[url('/static/images/registration-image.png')] bg-cover w-full hidden lg:block"
+        class="registration-image-block | bg-[url('/static/images/registration-image.png')] bg-cover w-full hidden lg:block lg:w-[50%]"
       ></div>
     </div>
   </div>
