--- a/users/templates/users/password_recovery.html
+++ b/users/templates/users/password_recovery.html
@@ -10,38 +10,31 @@
       <div class="login-main-block | lg:px-[4em] lg:pb-[8em] lg:w-[50%]">
         <div class="hero-text | flex flex-col gap-[1em] mt-[3.75em]">
           <h1 class="main-font main-title md:text-[2.35rem] lg:text-[3.75rem]">
-            Добро пожаловать в <span class="text-primary">Ink. House</span>
+            Забыли <span class="text-primary">пароль?</span>
           </h1>
         </div>
 
         <div class="login-form-block |">
           <form action="" method="POST" class="login-form | text-[#598D66]">
-            <label for="username">Вход</label><br />
             <input
               class="bg-[#E1EDE6] w-full px-[0.625em] py-[0.4em] rounded-lg placeholder-[#598D66] mt-[0.25em]"
               type="text"
-              placeholder="Имя пользователя"
+              placeholder="Имя пользователя или Email"
               name="username"
             />
-            <input
-              class="bg-[#E1EDE6] w-full px-[0.625em] py-[0.4em] rounded-lg mt-[0.5em] placeholder-[#598D66]"
-              type="password"
-              placeholder="Пароль"
-            />
+            <label class="text-[0.625rem] leading-[0rem]" for="username"
+              >Сообщение для сброса пароля будет отправлено на адрес электронной
+              почты связанный с пользователем</label
+            >
+
             <div
               class="underinputs | flex flex-col text-center gap-[0.5em] mt-[1.25em] items-center"
             >
-              <a
-                class="underline text-[#598D66] text-[0.9rem]"
-                href="{% url 'password-recovery' %}"
-                >Забыли пароль?</a
-              >
-
               <button
                 class="form-btn | bg-[#598D66] py-[0.5em] px-[1.25em] text-white rounded-[5em] w-full"
                 type="submit"
               >
-                Вход
+                Отправить
               </button>
             </div>
           </form>
@@ -57,12 +50,19 @@
           <a
             class="text-primary border-2 py-[0.875em] px-[2.75em] w-full text-center"
             href="{% url 'registration-page' %}"
-            >Регистрация</a
+            >Создать новый аккаунт</a
+          >
+        </div>
+        <div class="registration-link | mt-[1.5em] flex flex-col items-center">
+          <a
+            class="text-primary border-2 py-[0.875em] px-[2.75em] w-full text-center"
+            href="{% url 'login-page' %}"
+            >Войти в аккаунт</a
           >
         </div>
       </div>
       <div
-        class="login-image-block | bg-[url('/static/images/login-image.png')] bg-cover w-full hidden lg:block lg:w-[50%]"
+        class="login-image-block | bg-[url('/static/images/password-recovery.png')] bg-cover bg-center w-full hidden lg:block lg:w-[50%]"
       ></div>
     </div>
   </div>
