--- a/static/src/output.css
+++ b/static/src/output.css
@@ -609,10 +609,6 @@ video {
   margin-top: 3em;
 }
 
-.mt-\[0\.15em\] {
-  margin-top: 0.15em;
-}
-
 .block {
   display: block;
 }
@@ -713,6 +709,10 @@ video {
   justify-content: space-between;
 }
 
+.gap-\[0\.25em\] {
+  gap: 0.25em;
+}
+
 .gap-\[0\.5em\] {
   gap: 0.5em;
 }
@@ -739,10 +739,6 @@ video {
 
 .gap-\[3em\] {
   gap: 3em;
-}
-
-.gap-\[0\.25em\] {
-  gap: 0.25em;
 }
 
 .overflow-scroll {
@@ -817,24 +813,24 @@ video {
   background-image: url('/static/images/login-image.png');
 }
 
-.bg-\[url\(\'\/static\/images\/registration-image\.png\'\)\] {
-  background-image: url('/static/images/registration-image.png');
-}
-
 .bg-\[url\(\'\/static\/images\/password-recovery\.png\'\)\] {
   background-image: url('/static/images/password-recovery.png');
+}
+
+.bg-\[url\(\'\/static\/images\/registration-image\.png\'\)\] {
+  background-image: url('/static/images/registration-image.png');
 }
 
 .bg-cover {
   background-size: cover;
 }
 
-.bg-top {
-  background-position: top;
-}
-
 .bg-center {
   background-position: center;
+}
+
+.bg-top {
+  background-position: top;
 }
 
 .px-\[0\.625em\] {
@@ -902,11 +898,6 @@ video {
   padding-bottom: 3em;
 }
 
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-
 .pb-\[4em\] {
   padding-bottom: 4em;
 }
@@ -921,6 +912,14 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-\[0\.625rem\] {
+  font-size: 0.625rem;
+}
+
+.text-\[0\.725rem\] {
+  font-size: 0.725rem;
 }
 
 .text-\[0\.9rem\] {
@@ -944,14 +943,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-\[0\.625rem\] {
-  font-size: 0.625rem;
-}
-
-.text-\[0\.725rem\] {
-  font-size: 0.725rem;
-}
-
 .font-medium {
   font-weight: 500;
 }
@@ -962,10 +953,6 @@ video {
 
 .leading-5 {
   line-height: 1.25rem;
-}
-
-.leading-10 {
-  line-height: 2.5rem;
 }
 
 .leading-\[0rem\] {
@@ -987,9 +974,19 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.text-orange-400 {
+  --tw-text-opacity: 1;
+  color: rgb(251 146 60 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-green-400 {
+  --tw-text-opacity: 1;
+  color: rgb(74 222 128 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1156,28 +1153,16 @@ video {
     width: 4em;
   }
 
+  .lg\:w-\[50\%\] {
+    width: 50%;
+  }
+
   .lg\:w-\[80\%\] {
     width: 80%;
   }
 
   .lg\:w-full {
     width: 100%;
-  }
-
-  .lg\:w-\[70\%\] {
-    width: 70%;
-  }
-
-  .lg\:w-\[30\%\] {
-    width: 30%;
-  }
-
-  .lg\:w-\[55\%\] {
-    width: 55%;
-  }
-
-  .lg\:w-\[50\%\] {
-    width: 50%;
   }
 
   .lg\:max-w-\[50\%\] {
