--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -48,9 +48,15 @@
                 <a href="#">
                   <li class="nav-link | lg:w-[4em]">О нас</li>
                 </a>
+                {% if not user.is_authenticated %}
                 <a href="{% url 'login-page' %}">
                   <li class="nav-link | lg:w-[4em]">Логин</li>
                 </a>
+                {% else %}
+                <a href="{% url 'logout' %}">
+                  <li class="nav-link | lg:w-[4em]">Выйти</li>
+                </a>
+                {% endif %}
               </ul>
             </div>
           </div>
@@ -59,3 +65,8 @@
     </div>
   </nav>
 </header>
+{% for message in messages%}
+<div class="messages-block | text-center">
+  <p class="text-green-400">{{message}}</p>
+</div>
+{% endfor %}
