--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -19,6 +19,7 @@
             method="POST"
             class="registration-form | text-[#598D66]"
           >
+            {% csrf_token %}
             <label class="text-[0.725rem]" for="username"
               >Придумайте имя пользователя</label
             ><br />
@@ -40,11 +41,13 @@
               class="bg-[#E1EDE6] w-full px-[0.625em] py-[0.4em] rounded-lg mt-[1.25em] placeholder-[#598D66]"
               type="password"
               placeholder="Пароль"
+              name="password1"
             />
             <input
               class="bg-[#E1EDE6] w-full px-[0.625em] py-[0.4em] rounded-lg mt-[0.5em] placeholder-[#598D66]"
               type="password"
               placeholder="Повторите пароль"
+              name="password2"
             />
             <div
               class="underinputs | flex flex-col text-center gap-[0.5em] mt-[1.25em] items-center"
