--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,9 @@
   </head>
 
   <body class="bg-white font-medium">
-    <div class="uber-main | min-h-[100vh] flex flex-col justify-between">
+    <div
+      class="uber-main | min-h-[100vh] flex flex-col justify-between mx-auto overflow-hidden"
+    >
       <div class="main | min-h-[100%]">
         {% include 'navbar.html' %} {% block content %} {% if page_name %}
         <h1>PAGE NAME IS HERE</h1>
