--- a/static/src/output.css
+++ b/static/src/output.css
@@ -677,6 +677,42 @@ video {
   max-width: 8em;
 }
 
+.max-w-\[90\%\] {
+  max-width: 90%;
+}
+
+.max-w-\[100\%\] {
+  max-width: 100%;
+}
+
+.max-w-full {
+  max-width: 100%;
+}
+
+.max-w-\[33\%\] {
+  max-width: 33%;
+}
+
+.max-w-\[1280px\] {
+  max-width: 1280px;
+}
+
+.max-w-\[800px\] {
+  max-width: 800px;
+}
+
+.max-w-\[50\%\] {
+  max-width: 50%;
+}
+
+.max-w-\[95\%\] {
+  max-width: 95%;
+}
+
+.max-w-\[1200px\] {
+  max-width: 1200px;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -739,6 +775,10 @@ video {
 
 .gap-\[3em\] {
   gap: 3em;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .overflow-scroll {
@@ -1090,8 +1130,8 @@ video {
     width: 35%;
   }
 
-  .md\:w-\[60\%\] {
-    width: 60%;
+  .md\:max-w-\[60\%\] {
+    max-width: 60%;
   }
 
   .md\:grid-cols-3 {
@@ -1145,10 +1185,6 @@ video {
     width: 45%;
   }
 
-  .lg\:w-\[47\%\] {
-    width: 47%;
-  }
-
   .lg\:w-\[4em\] {
     width: 4em;
   }
@@ -1165,6 +1201,10 @@ video {
     width: 100%;
   }
 
+  .lg\:max-w-\[47\%\] {
+    max-width: 47%;
+  }
+
   .lg\:max-w-\[50\%\] {
     max-width: 50%;
   }
@@ -1177,8 +1217,20 @@ video {
     max-width: 100%;
   }
 
+  .lg\:max-w-\[45\%\] {
+    max-width: 45%;
+  }
+
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -1250,5 +1302,45 @@ video {
 
   .lg\:leading-10 {
     line-height: 2.5rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:max-w-\[50\%\] {
+    max-width: 50%;
+  }
+
+  .xl\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+
+  .xl\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:max-w-\[50\%\] {
+    max-width: 50%;
+  }
+
+  .\32xl\:max-w-\[70\%\] {
+    max-width: 70%;
+  }
+
+  .\32xl\:max-w-\[60\%\] {
+    max-width: 60%;
+  }
+
+  .\32xl\:max-w-\[55\%\] {
+    max-width: 55%;
+  }
+
+  .\32xl\:max-w-\[35\%\] {
+    max-width: 35%;
+  }
+
+  .\32xl\:max-w-\[1280px\] {
+    max-width: 1280px;
   }
 }
