--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
 
   <nav class="navbar | main-font sm:bg-[#E1EDE6] lg:py-[1em] w-full">
     <div
-      class="navbar-wrapper | flex flex-col justify-between lg:flex-row lg:max-w-[85%] lg:mx-auto 2xl:max-w-[70%]"
+      class="navbar-wrapper | flex flex-col justify-between lg:flex-row lg:max-w-[85%] lg:mx-auto"
     >
       <div class="navbar-logo-block flex justify-center py-[1em]">
         <a href="{% url 'home' %}">
